--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ h2{
     width:1.875em;
     font-family:Verdana;
     font-size: 16px;
+    font-weight: bold;
     background-color:#aaaaaa;
     border-color: #aaaaaa;
     color:black;
@@ -56,10 +57,23 @@ h2{
     width: 4em;
     font-family:Verdana;
     font-size: 16px;
+    font-weight: bold;
     background-color:#aaaaaa;
     border-color: #aaaaaa;
     color:black;
     border-radius: 0.625em;
     border-style: solid;
     text-align: center;
+    justify-content: center;
+}
+.alerts{
+    display: flex;
+    background-color: white;
+    height: 3.125em;
+    width: fit-content;
+    border-radius: 0.625em;
+    border-style: solid;
+    border-color: white;
+    text-align: center;
+    justify-content: center;
 }
