--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,16 @@
 .wordBox{
     text-align: center;
     width: 100%;
-    height: 4.25em;
+    height: 4.25rem;
 }
 .letterBox{
     display: inline-block;
-    width: 3.75em;
-    height: 3.75em;
+    width: 3.75rem;
+    height: 3.75rem;
     border-style: solid !important;
-    border: 0.125em;
+    border: 0.125rem;
     border-color: #444444;
-    margin: 0.1875em;
+    margin: 0.1875rem;
     text-align: center;
     vertical-align: top;
 }
@@ -30,38 +30,38 @@ h2{
 }
 #wordle{
     color: #ffffff;
-    font-size: 3.75em;
+    font-size: 3.75rem;
 }
 #keyboard{
     margin: auto;
     text-align: center;
-    width: 22.5em;
+    width: 22.5rem;
 }
 .key{
-    margin-top:0.3125em;
-    height:3.125em;
-    width:1.875em;
+    margin-top:0.3125rem;
+    height:3.125rem;
+    width:1.875rem;
     font-family:Verdana;
     font-size: 16px;
     font-weight: bold;
     background-color:#aaaaaa;
     border-color: #aaaaaa;
     color:black;
-    border-radius: 0.625em;
+    border-radius: 0.625rem;
     border-style: solid;
     text-align: center;
 }
 .double{
-    margin-top:0.3125em;
-    height:3.125em;
-    width: 4.125em;
+    margin-top:0.3125rem;
+    height:3.125rem;
+    width: 4.125rem;
     font-family:Verdana;
     font-size: 16px;
     font-weight: bold;
     background-color:#aaaaaa;
     border-color: #aaaaaa;
     color:black;
-    border-radius: 0.625em;
+    border-radius: 0.625rem;
     border-style: solid;
     text-align: center;
     padding: 0px;
@@ -69,9 +69,9 @@ h2{
 .alerts{
     display: flex;
     background-color: white;
-    height: 3.125em;
+    height: 3.125rem;
     width: fit-content;
-    border-radius: 0.625em;
+    border-radius: 0.625rem;
     border-style: solid;
     border-color: white;
     text-align: center;
